# sigscore

./: LICENSE  README.markdown  sigscore.cabal
examples/: noisy-graphs.R
src/: Main.hs
